<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_wish"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/screenbg"
     >

        <LinearLayout
            android:layout_marginTop="2dp"
            android:id="@+id/content_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/action_divider"
            android:background="@color/screenbg"
            android:orientation="vertical"
            android:padding="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/ic_cal"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentLeft="true"
                        android:layout_margin="2dp"
                        android:src="@drawable/icon_avatar_default" />

                    <com.example.gdjkj.myapplication.views.RegularTextView
                        android:id="@+id/message_wisher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/ic_cal"
                        android:paddingBottom="5dp"
                        android:text="@string/message"
                        android:textColor="#808080"
                        android:textSize="16sp" />
                    <com.example.gdjkj.myapplication.views.RegularTextView
                        android:id="@+id/name_wisher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/ic_cal"
                        android:paddingBottom="5dp"
                        android:layout_below="@+id/message_wisher"
                        android:text="@string/name"
                        android:textColor="#808080"
                        android:textSize="14sp" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
        <com.example.gdjkj.myapplication.views.RegularTextView
            android:id="@+id/reply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/splashbg"
            android:layout_below="@+id/content_linear_layout"
            android:text="@string/reply"
            android:textColor="@color/screenbg"
            android:padding="10dp"
            android:textSize="16sp" />
    </RelativeLayout>

</android.support.v7.widget.CardView>